Fix Transition Overlay Overflowing Container

--- a/src/components/world/styles.scss
+++ b/src/components/world/styles.scss
@@ -7,7 +7,7 @@
 .world-map-transition {
     position: absolute;
     width: calc(100% - 1.5em);
-    height: calc(100% - 15em);
+    height: calc(100% - 15.25em);
     left: 0.75em;
     top: 0.75em;
 
